Fixes for J17/18 accessiblity.